--- a/public/register.html
+++ b/public/register.html
@@ -7,73 +7,76 @@
   <link rel="stylesheet" href="/styles.css" />
   <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
-
 <body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
+
   <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
     <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">Register Your Business</h1>
 
-    <form action="/register" method="POST" class="space-y-4" id="registerForm">
+    <form id="registerForm" class="space-y-4">
+      <!-- Business Name -->
       <div>
-        <label for="business_name" class="block text-sm font-medium text-gray-700">Business Name</label>
-        <input type="text" id="business_name" name="business_name" required class="w-full mt-1 p-2 border rounded-md" />
+        <label for="business_name">Business Name</label>
+        <input type="text" id="business_name" name="businessName" required class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
+      <!-- Subdomain -->
       <div>
-        <label class="block text-sm font-medium text-gray-700">Your Subdomain</label>
-        <div class="mt-1 flex items-center space-x-2">
-          <input type="text" id="subdomain" name="subdomain" required readonly class="w-1/2 p-2 border rounded-md bg-gray-100 text-gray-700" />
-          <span class="text-gray-700">.tidyzenic.com</span>
+        <label>Your Subdomain</label>
+        <div class="flex gap-2 items-center mt-1">
+          <input type="text" id="subdomain" name="subdomain" readonly class="w-1/2 p-2 border rounded-md bg-gray-100 text-gray-700" />
+          <span>.tidyzenic.com</span>
         </div>
         <p id="subdomainStatus" class="text-sm mt-1 text-gray-500">Subdomain preview will appear here...</p>
       </div>
 
       <div>
-        <label for="owner_name" class="block text-sm font-medium text-gray-700">Owner Name</label>
-        <input type="text" id="owner_name" name="owner_name" required class="w-full mt-1 p-2 border rounded-md" />
+        <label for="owner_name">Owner Name</label>
+        <input type="text" id="owner_name" name="ownerName" required class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+        <label for="email">Email Address</label>
         <input type="email" id="email" name="email" required class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+        <label for="phone">Phone Number</label>
         <input type="tel" id="phone" name="phone" required class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="industry" class="block text-sm font-medium text-gray-700">Industry</label>
+        <label for="industry">Industry</label>
         <input type="text" id="industry" name="industry" required class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="location" class="block text-sm font-medium text-gray-700">Location</label>
+        <label for="location">Location</label>
         <input type="text" id="location" name="location" required class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="vat_number" class="block text-sm font-medium text-gray-700">VAT Number (optional)</label>
-        <input type="text" id="vat_number" name="vat_number" class="w-full mt-1 p-2 border rounded-md" />
+        <label for="vat_number">VAT Number (optional)</label>
+        <input type="text" id="vat_number" name="vatNumber" class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="custom_domain" class="block text-sm font-medium text-gray-700">Custom Domain (optional)</label>
+        <label for="custom_domain">Custom Domain (optional)</label>
         <input type="text" id="custom_domain" name="custom_domain" class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+        <label for="password">Password</label>
         <input type="password" id="password" name="password" required minlength="6" class="w-full mt-1 p-2 border rounded-md" />
       </div>
 
       <div>
-        <label for="confirm_password" class="block text-sm font-medium text-gray-700">Confirm Password</label>
-        <input type="password" id="confirm_password" name="confirm_password" required class="w-full mt-1 p-2 border rounded-md" />
+        <label for="confirm_password">Confirm Password</label>
+        <input type="password" id="confirm_password" required class="w-full mt-1 p-2 border rounded-md" />
+        <p id="passwordMatch" class="text-sm mt-1"></p>
       </div>
 
       <div>
-        <label for="preferred_language" class="block text-sm font-medium text-gray-700">Preferred Language</label>
+        <label for="preferred_language">Preferred Language</label>
         <select id="preferred_language" name="preferred_language" required class="w-full mt-1 p-2 border rounded-md">
           <option value="en">English</option>
           <option value="fr">Français</option>
@@ -84,9 +87,7 @@
         </select>
       </div>
 
-      <button type="submit" class="w-full mt-4 bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">
-        ✅ Register Business
-      </button>
+      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-md">Register</button>
     </form>
 
     <p class="mt-4 text-sm text-center text-gray-600">
@@ -95,123 +96,105 @@
     </p>
   </div>
 
+  <!-- Success Modal -->
+  <div id="successModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden z-50">
+    <div class="bg-white rounded-lg p-6 shadow-xl max-w-sm w-full text-center">
+      <h2 class="text-xl font-semibold text-green-600 mb-2">✅ Registration Complete</h2>
+      <p id="modalMessage" class="text-gray-700 mb-4"></p>
+      <a href="/login.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Go to Login</a>
+    </div>
+  </div>
+
+  <!-- Script -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const form = document.getElementById('registerForm');
-
-      const fields = [
-        'business_name', 'owner_name', 'email', 'phone', 'subdomain',
-        'industry', 'location', 'password', 'confirm_password', 'preferred_language'
-      ];
-
-      const businessName = document.getElementById('business_name');
-      const subdomainInput = document.getElementById('subdomain');
-      const subdomainStatus = document.getElementById('subdomainStatus');
       const password = document.getElementById('password');
       const confirmPassword = document.getElementById('confirm_password');
+      const passwordMatch = document.getElementById('passwordMatch');
+      const subdomainInput = document.getElementById('subdomain');
+      const businessName = document.getElementById('business_name');
+      const subdomainStatus = document.getElementById('subdomainStatus');
+      const modal = document.getElementById('successModal');
+      const modalMessage = document.getElementById('modalMessage');
 
-      const passwordMatchStatus = document.createElement('p');
-      passwordMatchStatus.className = 'text-sm mt-1';
-      confirmPassword.parentNode.appendChild(passwordMatchStatus);
-
-      fields.forEach(id => {
-        const field = document.getElementById(id);
-        if (!field) return;
-
-        const error = document.createElement('p');
-        error.className = 'text-sm text-red-500 mt-1 hidden';
-        error.id = `${id}_error`;
-        field.parentNode.appendChild(error);
-
-        field.addEventListener('input', () => {
-          validateField(field, error);
-          if (id === 'password' || id === 'confirm_password') {
-            validatePasswordMatch();
-          }
-        });
-      });
-
-      function validateField(field, errorEl) {
-        if (!field.value.trim()) {
-          errorEl.textContent = 'This field is required';
-          errorEl.classList.remove('hidden');
-          field.classList.add('border-red-500');
-        } else {
-          errorEl.textContent = '';
-          errorEl.classList.add('hidden');
-          field.classList.remove('border-red-500');
-        }
-      }
-
-      function validatePasswordMatch() {
-        if (!password.value || !confirmPassword.value) {
-          passwordMatchStatus.textContent = '';
-          return;
-        }
-        if (password.value !== confirmPassword.value) {
-          passwordMatchStatus.textContent = '❌ Passwords do not match';
-          passwordMatchStatus.className = 'text-sm text-red-500 mt-1';
-          confirmPassword.classList.add('border-red-500');
-        } else {
-          passwordMatchStatus.textContent = '✅ Passwords match';
-          passwordMatchStatus.className = 'text-sm text-green-600 mt-1';
-          confirmPassword.classList.remove('border-red-500');
-        }
-      }
-
+      // Autofill subdomain
       businessName.addEventListener('input', () => {
-        const name = businessName.value.trim().toLowerCase().replace(/[^a-z0-9]+/g, '-').substring(0, 30);
-        subdomainInput.value = name;
-        checkSubdomain(name);
+        const sub = businessName.value.trim().toLowerCase().replace(/[^a-z0-9]+/g, '-').substring(0, 30);
+        subdomainInput.value = sub;
+        checkSubdomain(sub);
       });
 
-      async function checkSubdomain(subdomain) {
-        if (subdomain.length < 3) {
+      async function checkSubdomain(sub) {
+        if (sub.length < 3) {
           subdomainStatus.textContent = 'Subdomain too short';
           subdomainStatus.className = 'text-sm text-red-500';
           return;
         }
         try {
-          const res = await axios.get(`/api/business/check-subdomain?subdomain=${subdomain}`);
+          const res = await axios.post('/register/check-subdomain', { subdomain: sub });
           if (res.data.exists) {
-            subdomainStatus.textContent = `❌ Unavailable: ${subdomain}.tidyzenic.com is already taken`;
+            subdomainStatus.textContent = `❌ ${sub}.tidyzenic.com is taken`;
             subdomainStatus.className = 'text-sm text-red-500';
           } else {
-            subdomainStatus.textContent = `✅ Available: ${subdomain}.tidyzenic.com`;
+            subdomainStatus.textContent = `✅ ${sub}.tidyzenic.com is available`;
             subdomainStatus.className = 'text-sm text-green-600';
           }
         } catch (err) {
-          subdomainStatus.textContent = '⚠️ Could not verify subdomain';
+          subdomainStatus.textContent = '⚠️ Subdomain check failed';
           subdomainStatus.className = 'text-sm text-yellow-600';
         }
       }
 
-      form.addEventListener('submit', (e) => {
-        let isValid = true;
+      // Password matching validation
+      function validatePasswords() {
+        if (!password.value || !confirmPassword.value) {
+          passwordMatch.textContent = '';
+          return;
+        }
+        if (password.value !== confirmPassword.value) {
+          passwordMatch.textContent = '❌ Passwords do not match';
+          passwordMatch.className = 'text-sm text-red-500';
+        } else {
+          passwordMatch.textContent = '✅ Passwords match';
+          passwordMatch.className = 'text-sm text-green-600';
+        }
+      }
 
-        fields.forEach(id => {
-          const field = document.getElementById(id);
-          const error = document.getElementById(`${id}_error`);
-          if (!field || !error) return;
+      password.addEventListener('input', validatePasswords);
+      confirmPassword.addEventListener('input', validatePasswords);
 
-          if (!field.value.trim()) {
-            error.textContent = 'This field is required';
-            error.classList.remove('hidden');
-            field.classList.add('border-red-500');
-            isValid = false;
-          }
-        });
+      // Handle form submit
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
 
         if (password.value !== confirmPassword.value) {
-          const error = document.getElementById('confirm_password_error');
-          error.textContent = 'Passwords do not match';
-          error.classList.remove('hidden');
-          confirmPassword.classList.add('border-red-500');
-          isValid = false;
+          alert('❌ Passwords do not match.');
+          return;
         }
 
-        if (!isValid) {
-          e.preventDefault();
+        const formData = new FormData(form);
+        const data = Object.fromEntries(formData.entries());
+
+        try {
+          const res = await fetch('/register', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(data),
+          });
+
+          const result = await res.json();
+
+          if (res.ok) {
+            modalMessage.textContent = result.message;
+            modal.classList.remove('hidden');
+            form.reset();
+          } else {
+            alert(result.error || '❌ Something went wrong.');
+          }
+
+        } catch (err) {
+          alert('❌ Server error. Try again later.');
         }
       });
     });
