--- a/public/register.html
+++ b/public/register.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" class="h-full">
 <head>
@@ -8,102 +9,50 @@
   <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
-
   <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
     <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">Register Your Business</h1>
-
     <form id="registerForm" class="space-y-4">
-      <!-- Business Name -->
-      <div>
-        <label for="business_name">Business Name</label>
-        <input type="text" id="business_name" name="businessName" required class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <!-- Subdomain -->
-      <div>
-        <label>Your Subdomain</label>
-        <div class="flex gap-2 items-center mt-1">
-          <input type="text" id="subdomain" name="subdomain" readonly class="w-1/2 p-2 border rounded-md bg-gray-100 text-gray-700" />
-          <span>.tidyzenic.com</span>
-        </div>
-        <p id="subdomainStatus" class="text-sm mt-1 text-gray-500">Subdomain preview will appear here...</p>
-      </div>
-
-      <div>
-        <label for="owner_name">Owner Name</label>
-        <input type="text" id="owner_name" name="ownerName" required class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="email">Email Address</label>
-        <input type="email" id="email" name="email" required class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" required class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="industry">Industry</label>
-        <input type="text" id="industry" name="industry" required class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="location">Location</label>
-        <input type="text" id="location" name="location" required class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="vat_number">VAT Number (optional)</label>
-        <input type="text" id="vat_number" name="vatNumber" class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="custom_domain">Custom Domain (optional)</label>
-        <input type="text" id="custom_domain" name="custom_domain" class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required minlength="6" class="w-full mt-1 p-2 border rounded-md" />
-      </div>
-
-      <div>
-        <label for="confirm_password">Confirm Password</label>
-        <input type="password" id="confirm_password" required class="w-full mt-1 p-2 border rounded-md" />
-        <p id="passwordMatch" class="text-sm mt-1"></p>
-      </div>
-
-      <div>
-        <label for="preferred_language">Preferred Language</label>
+      <div><label for="business_name" class="block text-sm font-medium text-gray-700">Business Name</label>
+        <input type="text" id="business_name" name="business_name" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label class="block text-sm font-medium text-gray-700">Subdomain</label>
+        <div class="mt-1 flex items-center space-x-2">
+          <input type="text" id="subdomain" name="subdomain" required readonly class="w-1/2 p-2 border rounded-md bg-gray-100 text-gray-700" />
+          <span class="text-gray-700">.tidyzenic.com</span></div>
+        <p id="subdomainStatus" class="text-sm mt-1 text-gray-500">Subdomain preview will appear here...</p></div>
+      <div><label for="owner_name" class="block text-sm font-medium text-gray-700">Owner Name</label>
+        <input type="text" id="owner_name" name="owner_name" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+        <input type="email" id="email" name="email" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+        <input type="tel" id="phone" name="phone" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="industry" class="block text-sm font-medium text-gray-700">Industry</label>
+        <input type="text" id="industry" name="industry" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="location" class="block text-sm font-medium text-gray-700">Location</label>
+        <input type="text" id="location" name="location" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="vat_number" class="block text-sm font-medium text-gray-700">VAT Number (optional)</label>
+        <input type="text" id="vat_number" name="vat_number" class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+        <input type="password" id="password" name="password" required minlength="6" class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="confirm_password" class="block text-sm font-medium text-gray-700">Confirm Password</label>
+        <input type="password" id="confirm_password" name="confirm_password" required class="w-full mt-1 p-2 border rounded-md" /></div>
+      <div><label for="preferred_language" class="block text-sm font-medium text-gray-700">Preferred Language</label>
         <select id="preferred_language" name="preferred_language" required class="w-full mt-1 p-2 border rounded-md">
-          <option value="en">English</option>
-          <option value="fr">Français</option>
-          <option value="nl">Dutch</option>
-          <option value="es">Español</option>
-          <option value="pt">Português</option>
-          <option value="de">Deutsch</option>
-        </select>
-      </div>
-
-      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-md">Register</button>
+          <option value="en">English</option><option value="fr">Français</option><option value="nl">Dutch</option>
+          <option value="es">Español</option><option value="pt">Português</option><option value="de">Deutsch</option>
+        </select></div>
+      <button type="submit" class="w-full mt-4 bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">✅ Register Business</button>
     </form>
-
-    <p class="mt-4 text-sm text-center text-gray-600">
-      Already registered?
-      <a href="/login.html" class="text-blue-600 hover:underline">Login</a>
-    </p>
+    <p class="mt-4 text-sm text-center text-gray-600">Already registered?
+      <a href="/login.html" class="text-blue-600 hover:underline">Login</a></p>
   </div>
-
-  <!-- Success Modal -->
   <div id="successModal" class="fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center hidden z-50">
-    <div class="bg-white rounded-lg p-6 shadow-xl max-w-sm w-full text-center">
+    <div class="bg-white rounded-lg shadow-xl max-w-sm w-full p-6 text-center">
       <h2 class="text-xl font-semibold text-green-600 mb-2">✅ Registration Complete</h2>
-      <p id="modalMessage" class="text-gray-700 mb-4"></p>
-      <a href="/login.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Go to Login</a>
+      <p id="modalMessage" class="text-gray-700 mb-4">A verification email has been sent to your email address.</p>
+      <a id="goToLoginBtn" href="/login.html" class="inline-block mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Go to Login</a>
     </div>
   </div>
+
 
   <!-- Script -->
   <script>
